--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "^1.18.2",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-picker/picker": "^2.8.1",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.17",
@@ -24,11 +24,15 @@
     "expo": "~48.0.18",
     "expo-image-multiple-picker": "^4.8.3",
     "expo-image-picker": "^14.3.2",
+    "expo-localization": "~14.1.1",
     "expo-media-library": "~15.2.3",
     "expo-status-bar": "~1.4.4",
     "formik": "^2.4.2",
+    "i18next": "^23.16.0",
+    "i18next-http-backend": "^2.6.2",
     "moment": "^2.29.4",
     "react": "18.2.0",
+    "react-i18next": "^15.0.3",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
