--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "expo-localization": "~14.1.1",
     "expo-media-library": "~15.2.3",
     "expo-status-bar": "~1.4.4",
-    "formik": "^2.4.2",
+    "formik": "^2.4.6",
     "i18next": "^23.16.0",
     "i18next-http-backend": "^2.6.2",
     "moment": "^2.29.4",
@@ -35,6 +35,7 @@
     "react-i18next": "^15.0.3",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-paper": "^5.12.5",
@@ -46,8 +47,8 @@
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.0.0-rc.3",
-    "uuid": "^9.0.0",
-    "yup": "^1.2.0"
+    "uuid": "^10.0.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -58,7 +59,7 @@
     "@types/redux": "^3.6.0",
     "@types/redux-persist": "^4.3.1",
     "@types/styled-components": "^5.1.26",
-    "@types/uuid": "^9.0.2",
+    "@types/uuid": "^10.0.0",
     "@types/yup": "^0.32.0",
     "typescript": "^4.9.4"
   },
