--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-community/netinfo": "9.3.7",
     "@react-native-picker/picker": "^2.8.1",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.17",
