--- a/package.json
+++ b/package.json
@@ -12,37 +12,38 @@
     "build:ios": "eas build --platform ios"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.0.0",
-    "@react-native-community/netinfo": "9.3.7",
-    "@react-native-picker/picker": "^2.8.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "11.4.1",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^1.9.5",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "axios": "^1.4.0",
-    "expo": "~48.0.18",
+    "expo": "^52.0.11",
+    "expo-build-properties": "~0.13.1",
     "expo-image-multiple-picker": "^4.8.3",
-    "expo-image-picker": "^14.3.2",
-    "expo-localization": "~14.1.1",
-    "expo-media-library": "~15.2.3",
-    "expo-status-bar": "~1.4.4",
+    "expo-image-picker": "~16.0.3",
+    "expo-localization": "~16.0.0",
+    "expo-media-library": "~17.0.3",
+    "expo-status-bar": "~2.0.0",
     "formik": "^2.4.6",
     "i18next": "^23.16.0",
     "i18next-http-backend": "^2.6.2",
     "moment": "^2.29.4",
-    "react": "18.2.0",
+    "react": "18.3.1",
     "react-i18next": "^15.0.3",
-    "react-native": "0.71.8",
-    "react-native-gesture-handler": "~2.9.0",
+    "react-native": "0.76.3",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-paper": "^5.12.5",
     "react-native-picker-select": "^9.3.1",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-native-svg": "13.4.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-svg": "15.8.0",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
@@ -51,17 +52,17 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.25.2",
     "@types/axios": "^0.14.0",
     "@types/moment": "^2.13.0",
-    "@types/react": "~18.0.14",
+    "@types/react": "~18.3.12",
     "@types/react-redux": "^7.1.25",
     "@types/redux": "^3.6.0",
     "@types/redux-persist": "^4.3.1",
     "@types/styled-components": "^5.1.26",
     "@types/uuid": "^10.0.0",
     "@types/yup": "^0.32.0",
-    "typescript": "^4.9.4"
+    "typescript": "^5.3.3"
   },
   "private": true
 }
